# codur

./: .gitignore  AGENTIC_LOGIC.md  AGENT_ECOSYSTEM.md  CLAUDE.md  CODING.md  README.md  TEXTUAL_GUIDE.md  TODO.md  codur.yaml  demo_tui.py  pyproject.toml  refactor_plan.md
challenges/: README.md
challenges/01-fix-off-by-onerror/: main.py
challenges/02-fix-discount-mismatch/: expected.txt  main.py  prompt.txt
challenges/03-decimal-rounding/: expected.txt  main.py  prompt.txt
challenges/03-title-case-exceptions/: expected.txt  prompt.txt
challenges/04-decimal-rounding/: main.py
challenges/04-multi-file/: prompt.txt
challenges/04-title-case-exceptions/: main.py
challenges/05-multi-file/: utils.py
challenges/05-multi-file-not-main/: app.py  prompt.txt
challenges/06-multi-file-not-main/: expected.txt  prompt.txt
challenges/06-title-case-exceptions/: main.py
challenges/07-markdown-table-formatter/: expected.txt  main.py  prompt.txt
challenges/08-climb-stairs/: expected.txt  main.py  prompt.txt
challenges/08-distance/: main.py
challenges/08-implement-palindrome/: main.py  prompt.txt
challenges/08-recursive-fibonacci-bug/: expected.txt  main.py  prompt.txt
challenges/09-implement-palindrome/: expected.txt  test_main.py
challenges/09-markdown-table-formatter/: main.py  prompt.txt
codur/: __init__.py  cli.py  config.py  constants.py  errors.py  llm.py  model_registry.py  tui.py  tui_components.py  tui_standalone.py  tui_style.py
codur/agents/: __init__.py  base.py  capabilities.py  claude_code_agent.py  cli_agent_base.py  codex_agent.py  ollama_agent.py  ollama_agent_backup.py  ollama_client.py  ollama_langchain.py
codur/graph/: AGENTIC_LOGIC.md  FLAKINESS_IMPROVEMENTS.md  __init__.py  coding.py  coding_agent.py  explaining.py  main_graph.py  message_summary.py  node_types.py  non_llm_tools.py  routing_node.py  state.py  state_operations.py  tool_detection.py  tool_executor.py  tools.py  utils.py  verification_agent.py
codur/graph/execution/: README.md  __init__.py  agent_executor.py  delegate.py  execute.py  repair.py  review.py  verification_agent.py
codur/graph/nodes/: __init__.py  coding.py  execution.py  explaining.py  non_llm_tools.py  path_utils.py  planning.py  routing.py  tool_detection.py  tool_executor.py  tools.py  types.py  utils.py
codur/graph/planning/: __init__.py  classifier.py  core.py  decision_handler.py  prompt_builder.py  tool_analysis.py  validators.py
codur/observability/: metrics.py
codur/providers/: __init__.py  anthropic.py  base.py  groq.py  ollama.py  openai.py  utils.py
codur/tools/: README.md  __init__.py  agents.py  ast_utils.py  clarification.py  code_modification.py  duckduckgo.py  filesystem.py  git.py  linting.py  markdown.py  mcp_tools.py  meta_tools.py  pandoc.py  project_analysis.py  project_discovery.py  psutil_tools.py  python_ast.py  registry.py  ripgrep.py  rope_tools.py  schema_generator.py  structured.py  tool_annotations.py  validation.py  verification_response.py  webrequests.py
codur/utils/: README.md  config_helpers.py  custom_messages.py  git.py  history_summary.py  ignore_utils.py  json_parser.py  llm_calls.py  llm_helpers.py  message_pipeline.py  path_extraction.py  path_utils.py  retry.py  text_helpers.py  token_counter.py  tool_helpers.py  tool_response_handler.py  validation.py
skills/: create-challenges.md  solve-challenges.md  trial-error-loop.md
tests/: conftest.py  test_challenges.py  test_tui_gitignore.py
tests/agents/: test_cli_agent_base.py
tests/graph/nodes/: test_json_tool_detection.py
tests/py_only/agents/: test_cli_agent_base.py  test_codex_agent.py  test_ollama_agent.py
tests/py_only/tools/: SCHEMA_PARITY_RESULTS.md  compare_schemas.py  test_agents_tools.py  test_ast_utils.py  test_code_modification.py  test_filesystem.py  (+22 more)
tests/tools/: test_ddg_search.py  test_filesystem.py
tests/utils/: test_path_utils.py
tests/with_llm_calls/: conftest.py  test_codur_coding_agent.py
tests/with_several_llm_calls/: test_challenges.py
(+96 files in other folders)
