[project]
name = "codur"
version = "0.1.0"
description = "Autonomous coding agent orchestrator using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "mcp>=0.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pytest>=9.0.2",
]

[project.scripts]
codur = "codur.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["challenges*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
