[project]
name = "codur"
version = "0.1.0"
description = "Autonomous coding agent orchestrator using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "mcp>=0.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.12.1",
    "pytest>=9.0.2",
    "pygit2>=1.18.2",
    "pathspec>=0.12.0",
    "vulture>=2.14",
    "ddgs>=9.10.0",
    "psutil>=7.2.0",
    "prospector>=1.17.3",
    "ripgrepy>=2.2.0",
    "rope>=1.14.0",
]

[project.scripts]
codur = "codur.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["challenges*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:langsmith\\.schemas",
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater.*:UserWarning",
    "ignore:codecs.open\\(\\) is deprecated:DeprecationWarning",
    "ignore:Delete once deprecated functions are gone:DeprecationWarning",
]

[tool.vulture]
exclude = [
    "challenges/",
    "tests/",
    "codur/tui.py",
    "*/__pycache__/",
    "*.pyc",
]
ignore_decorators = [
    "@tool_scenarios",
    "@tool_side_effects",
    "@tool_contexts",
    "@staticmethod",
    "@classmethod",
    "@property",
    "@abstractmethod",
]
ignore_names = [
    "test_*",  # Ignore test functions
]
min_confidence = 65
paths = ["codur/"]
